--- a/assignment/index.html
+++ b/assignment/index.html
@@ -12,20 +12,23 @@
     <div id="menu">
         <div id="menu_logo">
             <a href="#home">
-                <div>
-                    <img src="images/logo.png">
-                    <h3>Medical</h3>
+                <div class="loca_info">
+                    <div class="loca_phone">
+                        <div><img src="images/logo.png"></div>
+                        <div>
+                            <h4>Medical</h4>
+                        </div>
+                    </div>
                 </div>
             </a>
-
         </div>
         <div id="menu_bar">
             <div id="menu_about"><a href="#about_us">About</a></div>
             <div id="menu_doctors"><a href="#our_doctors">Doctors</a></div>
             <div id="menu_location"><a href="#location">Location</a></div>
-            <div id="menu_signup"><a href="#signup">Sign Up</a></div>
+            <a href="sign_up.html"><div id="menu_signup">Sign Up</a></div></a>
             <div>
-                <a href="#signup">
+                <a href="sign_up.html">
                     <img src="images/icon.png">
                 </a>
             </div>
@@ -67,16 +70,70 @@
             <div class="doctors1">
                 <a href="dr_john.html"><img src="images/doctor.png"></a>
                 <h3>Dr.John</h3>
+                <div class="info">
+                    <div>
+                        <div>
+                            <img src="images/good.png">
+                        </div>
+                        <div>
+                            <p>95%</p>
+                        </div>
+                    </div>
+                    <div>
+                        <div>
+                            <img src="images/work.png">
+                        </div>
+                        <div>
+                            <p>15 Years</p>
+                        </div>
+                    </div>
+                </div>
                 <a href="appointment.html" class="button">Create Appointment Now!</a>
             </div>
             <div class="doctors1">
                 <a href="dr_john.html"><img src="images/doctor1.png"></a>
                 <h3>Dr.David</h3>
+                <div class="info">
+                    <div>
+                        <div>
+                            <img src="images/good.png">
+                        </div>
+                        <div>
+                            <p>97%</p>
+                        </div>
+                    </div>
+                    <div>
+                        <div>
+                            <img src="images/work.png">
+                        </div>
+                        <div>
+                            <p>4 Years</p>
+                        </div>
+                    </div>
+                </div>
                 <a href="appointment.html" class="button">Create Appointment Now!</a>
             </div>
             <div class="doctors1">
                 <a href="dr_john.html"><img src="images/doctor2.png"></a>
                 <h3>Dr.Paul</h3>
+                <div class="info">
+                    <div>
+                        <div>
+                            <img src="images/good.png">
+                        </div>
+                        <div>
+                            <p>96%</p>
+                        </div>
+                    </div>
+                    <div>
+                        <div>
+                            <img src="images/work.png">
+                        </div>
+                        <div>
+                            <p>8 Years</p>
+                        </div>
+                    </div>
+                </div>
                 <a href="appointment.html" class="button">Create Appointment Now!</a>
             </div>
         </div>
@@ -85,27 +142,147 @@
             <div class="doctors1">
                 <a href="dr_john.html"><img src="images/doctor3.png"></a>
                 <h3>Dr.Lisa</h3>
+                <div class="info">
+                    <div>
+                        <div>
+                            <img src="images/good.png">
+                        </div>
+                        <div>
+                            <p>99%</p>
+                        </div>
+                    </div>
+                    <div>
+                        <div>
+                            <img src="images/work.png">
+                        </div>
+                        <div>
+                            <p>3 Years</p>
+                        </div>
+                    </div>
+                </div>
                 <a href="appointment.html" class="button">Create Appointment Now!</a>
             </div>
             <div class="doctors1">
                 <a href="dr_john.html"><img src="images/doctor4.png"></a>
                 <h3>Dr.Amy</h3>
+                <div class="info">
+                    <div>
+                        <div>
+                            <img src="images/good.png">
+                        </div>
+                        <div>
+                            <p>98%</p>
+                        </div>
+                    </div>
+                    <div>
+                        <div>
+                            <img src="images/work.png">
+                        </div>
+                        <div>
+                            <p>4 Years</p>
+                        </div>
+                    </div>
+                </div>
                 <a href="appointment.html" class="button">Create Appointment Now!</a>
             </div>
             <div class="doctors1">
                 <a href="dr_john.html"><img src="images/doctor5.png"></a>
                 <h3>Dr.Linda</h3>
+                <div class="info">
+                    <div>
+                        <div>
+                            <img src="images/good.png">
+                        </div>
+                        <div>
+                            <p>95%</p>
+                        </div>
+                    </div>
+                    <div>
+                        <div>
+                            <img src="images/work.png">
+                        </div>
+                        <div>
+                            <p>10 Years</p>
+                        </div>
+                    </div>
+                </div>
                 <a href="appointment.html" class="button">Create Appointment Now!</a>
             </div>
         </div>
     </div>
     <div id="location">
+        <div class="loca">
+            <div>
+                <h1>Our Clinics</h1>
+                <h3>Bibendum Medical Center</h3>
+                <div class="loca_info">
+                    <div class="loca_phone">
+                        <div><img src="images/call.png"></div>
+                        <div>
+                            <p>+98 765 432 10</p>
+                        </div>
+                    </div>
+                    <div class="loca_phone">
+                        <div><img src="images/mail.png"></div>
+                        <div>
+                            <p>hello@luxi.com</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="loca_info">
+                    <div class="loca_phone">
+                        <div><img src="images/pin.png"></div>
+                        <div>
+                            <p>Vivamus street Block C - Vestibulum Building - 3rd Floor</p>
+                        </div>
+                    </div>
+                </div>
+                <h3>Bibendum Medical Center</h3>
+                <div class="loca_info">
+                    <div class="loca_phone">
+                        <div><img src="images/call.png"></div>
+                        <div>
+                            <p>+98 765 432 10</p>
+                        </div>
+                    </div>
+                    <div class="loca_phone">
+                        <div><img src="images/mail.png"></div>
+                        <div>
+                            <p>hello@luxi.com</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="loca_info">
+                    <div class="loca_phone">
+                        <div><img src="images/pin.png"></div>
+                        <div id="last">
+                            <p>Vivamus street Block C - Vestibulum Building - 3rd Floor</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="loca_info">
+                    <div class="loca_phone">
+                        <div><img src="images/logo.png"></div>
+                        <div>
+                            <h4>Medical</h4>
+                        </div>
+                    </div>
+                </div>
+                <div class="loca_info">
+                    <div class="loca_phone">
+                        <div><img src="images/bottom_call.png"></div>
+                        <div><img src="images/fb.png"></div>
+                        <div><img src="images/youtube.png"></div>
+                        <div><img src="images/Insta.png"></div>
+                        <div><img src="images/Telegram.png"></div>
+                    </div>
+                </div>
 
-        <div>
-            <h1>Our Clinics</h1>
+
+            </div>
         </div>
-        <div>
-            <img src="images/location.png">
+        <div class="loca">
+            <img src="images/location.png" id="map">
         </div>
 
     </div>
