--- a/assignment/index.html
+++ b/assignment/index.html
@@ -59,7 +59,8 @@
             <h2>24/7</h2>
             <p>Hour</p>
             <div>
-                <p>Our clinics have been certified by the Board of Medicine Malaysia</p>
+                <p>Our clinics have been certified by the Board of Medicine Malaysia</p><br><br>
+                <a class="button" href="facility.html">Click for see Our Facility</a>
             </div>
         </div>
 
