--- a/assignment/dr_john.html
+++ b/assignment/dr_john.html
@@ -7,7 +7,45 @@
     <link href="css/styles.css" rel="stylesheet" />
 </head>
 
-<body>
+<body id="Doctor">
+
+    <div class="doctor_div" id="doctor_left">
+        <div class="doctor_left_1">
+            <a href="index.html">
+                <div class="appointment_logo">
+                    <div class="loca_phone">
+                        <div><img src="images/appointment_logo.png"></div>
+                        <div>
+                            <h1>Medical</h1>
+                        </div>
+                    </div>
+                </div>
+            </a>
+        </div>
+        <div><img src="images/doctor.png"></div>
+    </div>
+    <div class="doctor_div" id="doctor_center">
+        <h1 id="john">Dr.John</h1>
+        <div>
+            <h2>Specialist Surgeon</h2>
+            <p>MBBS (Hons) MPhil FRACS</p>
+        </div>
+        <div>
+            <h2>Completed Advanced Surgical</h2>
+            <p>In Queensland (2008)</p>
+        </div>
+        <div>
+            <h2>Office Hour</h2>
+            <p>Monday - Friday 0830-1500<br>
+                Saturday 1000-1500</p>
+        </div>
+        <div>
+            <h2>“Our purpose is to listen to each patient, help them understand their options and deliver the best care possible.”</h2>
+        </div>
+    </div>
+    <div class="doctor_div" id="doctor_map">
+        <img src="images/Queensland.png">
+    </div>
 
 </body>
 
