--- a/assignment/sign_up.html
+++ b/assignment/sign_up.html
@@ -2,12 +2,64 @@
 <html>
 
 <head>
-    <title>Sign_Up</title>
+    <title>Sign Up</title>
     <link rel="icon" type="image/x-icon" href="images/logo.png" />
     <link href="css/styles.css" rel="stylesheet" />
 </head>
 
-<body>
+<body class="appointment">
+    <div class="sign_top">
+        <div class="sign_top_logo">
+            <a href="index.html">
+                <div class="appointment_logo">
+                    <div class="loca_phone">
+                        <div><img src="images/appointment_logo.png"></div>
+                        <div>
+                            <h1>Medical</h1>
+                        </div>
+                    </div>
+                </div>
+            </a>
+        </div>
+        <h1 class="topic">Sign Up</h1>
+    </div>
+
+    <div id="from">
+        <form action="thank_you.html">
+            <div class="sign_up_box">
+                <div class="sign_up_box2">
+                    <h2>Name *</h2>
+                    <input type="text" name="name" size="50" required>
+                </div>
+                <div class="sign_up_box2">
+                    <h2>NRIC/Passport no. * </h2>
+                    <input type="text" name="adults" size="50" required>
+                </div>
+            </div>
+            <div class="sign_up_box">
+                <div class="sign_up_box2">
+                    <h2>Date On Birth</h2>
+                    <input type="date" name="date">
+                </div>
+                <div class="sign_up_box2" id="sign_up_phone">
+                    <h2>What is your phone number?</h2>
+                    <input type="text" name="phone" size="50" placeholder="+12 345 678 90">
+                </div>
+            </div>
+            <div class="sign_up_box">
+                <div class="sign_up_box2">
+                    <h2>What it your email? </h2>
+                    <input type="text" name="email" size="50" placeholder="example@gmail.com">
+                </div>
+            </div>
+            <br><br>
+            <div id="sign_up_button">
+                <a type="submit" class="button_appointment" href="thank_you.html">Submint</a>
+            </div>
+
+        </form>
+    </div>
+
 
 </body>
 
