--- a/assignment/facility.html
+++ b/assignment/facility.html
@@ -7,7 +7,7 @@
     <link href="css/styles.css" rel="stylesheet" />
 </head>
 
-<body class="appointment">
+<body class="appointment" id="facility_bg">
     <div class="sign_top">
         <div class="sign_top_logo">
             <a href="index.html">
@@ -21,7 +21,37 @@
                 </div>
             </a>
         </div>
-        <h1 class="topic">Sign Up</h1>
+        <h1 class="topic">Our Facility</h1>
+    </div>
+    <div class="facility">
+        <div class="facility_pic">
+            <img src="images/facility1.png">
+        </div>
+        <div class="facility_word">
+            <h1 class="facility_h1">Room Size</h1>
+            <h3 class="facility_h3">Require more staff, and are recommended to be at least 600 square feet.</h3>
+        </div>
+    </div>
+
+    <div class="facility">
+        
+        <div class="facility_word" id="facility_2_word">
+            <h1 class="facility_h1">Waiting Room</h1>
+            <h3 class="facility_h3">Seating comfortable. Arms on chairs easier for patients to sit down and get up; chair sizes should vary in order to accommodate bariatric users.</h3>
+        </div>
+        <div class="facility_pic" id="facility_2_pic">
+            <img src="images/facility2.jpg">
+        </div>
+    </div>
+
+    <div class="facility">
+        <div class="facility_pic">
+            <img src="images/facility3.jpg">
+        </div>
+        <div class="facility_word">
+            <h1 class="facility_h1">Location</h1>
+            <h3 class="facility_h3">There are many branches in Kuala Lumpur and easily accessible.</h3>
+        </div>
     </div>
 
 </body>
