--- a/assignment/dr_john.html
+++ b/assignment/dr_john.html
@@ -22,7 +22,7 @@
                 </div>
             </a>
         </div>
-        <div><img src="images/doctor.png"></div>
+        <div><img id="doctor_img" src="images/doctor.png"></div>
     </div>
     <div class="doctor_div" id="doctor_center">
         <h1 id="john">Dr.John</h1>
