--- a/assignment/facility.html
+++ b/assignment/facility.html
@@ -34,13 +34,12 @@
     </div>
 
     <div class="facility">
-        
-        <div class="facility_word" id="facility_2_word">
+        <div class="facility_pic">
+            <img src="images/facility2.jpg">
+        </div>
+        <div class="facility_word">
             <h1 class="facility_h1">Waiting Room</h1>
             <h3 class="facility_h3">Seating comfortable. Arms on chairs easier for patients to sit down and get up; chair sizes should vary in order to accommodate bariatric users.</h3>
-        </div>
-        <div class="facility_pic" id="facility_2_pic">
-            <img src="images/facility2.jpg">
         </div>
     </div>
 
