--- a/assignment/index.html
+++ b/assignment/index.html
@@ -5,6 +5,7 @@
     <title>Medical</title>
     <link rel="icon" type="image/x-icon" href="images/logo.png" />
     <link href="css/styles.css" rel="stylesheet" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 </head>
 
@@ -16,17 +17,17 @@
                     <div class="loca_phone">
                         <div><img src="images/logo.png"></div>
                         <div>
-                            <h4>Medical</h4>
+                            <h3>Medical</h3>
                         </div>
                     </div>
                 </div>
             </a>
         </div>
-        <div id="menu_bar">
+        <div class="topnav" id="menu_bar">
             <div id="menu_about"><a href="#about_us">About</a></div>
             <div id="menu_doctors"><a href="#our_doctors">Doctors</a></div>
             <div id="menu_location"><a href="#location">Location</a></div>
-            <a href="sign_up.html"><div id="menu_signup">Sign Up</a></div></a>
+            <div id="menu_signup"><a href="sign_up.html">Sign Up</a></div>
             <div>
                 <a href="sign_up.html">
                     <img src="images/icon.png">
@@ -44,17 +45,17 @@
                 <h2>Your health and wellbeing is important for us.</h2>
             </div>
         </div>
-        <div>
+        <div id="home_right">
             <img src="images/image_for_home.jpg">
         </div>
     </div>
 
-    <button id="back_to_top"></button>
+    <a href="#home"><img src="images/go_to_top.png" id="back_to_top"></a>
     <div id="about_us">
         <div id="about_us_left">
-            <img src="images/bg_about.png">
+            <img src="images/bg_about_1.png" id="about_us_pic">
         </div>
-        <div>
+        <div id="about_us_right">
             <h1>We will services for </h1>
             <h2>24/7</h2>
             <p>Hour</p>
@@ -287,7 +288,6 @@
         </div>
 
     </div>
-
 
 </body>
 
