--- a/assignment/index.html
+++ b/assignment/index.html
@@ -218,49 +218,64 @@
                 <h1>Our Clinics</h1>
                 <h3>Bibendum Medical Center</h3>
                 <div class="loca_info">
-                    <div class="loca_phone">
-                        <div><img src="images/call.png"></div>
-                        <div>
-                            <p>+98 765 432 10</p>
+                    <a href="tel:+98 765 432 10" class="no_underline">
+                        <div class="loca_phone">
+                            <div><img src="images/call.png"></div>
+                            <div>
+                                <p>+98 765 432 10</p>
+                            </div>
                         </div>
-                    </div>
-                    <div class="loca_phone">
-                        <div><img src="images/mail.png"></div>
-                        <div>
-                            <p>hello@luxi.com</p>
+                    </a>
+                    <a href="mailto:hello@luxi.com" class="no_underline">
+                        <div class="loca_phone">
+                            <div><img src="images/mail.png"></div>
+                            <div>
+                                <p>hello@luxi.com</p>
+                            </div>
                         </div>
-                    </div>
+                    </a>
                 </div>
                 <div class="loca_info">
-                    <div class="loca_phone">
-                        <div><img src="images/pin.png"></div>
-                        <div>
-                            <p>Vivamus street Block C - Vestibulum Building - 3rd Floor</p>
+                    <a href="https://www.google.com/maps/place/Kajang+Hospital/@2.9926246,101.7932559,18.89z/data=!4m5!3m4!1s0x31cdcb81fb409889:0xa9a6012492ad7d36!8m2!3d2.992875!4d101.7928458"
+                        class="no_underline">
+                        <div class="loca_phone">
+                            <div><img src="images/pin.png"></div>
+                            <div>
+                                <p>Vivamus street Block C - Vestibulum Building - 3rd Floor</p>
+                            </div>
                         </div>
-                    </div>
+                    </a>
                 </div>
                 <h3>Bibendum Medical Center</h3>
                 <div class="loca_info">
-                    <div class="loca_phone">
-                        <div><img src="images/call.png"></div>
-                        <div>
-                            <p>+98 765 432 10</p>
+                    <a href="tel:+98 765 432 10" class="no_underline">
+                        <div class="loca_phone">
+                            <div><img src="images/call.png"></div>
+                            <div>
+                                <p>+98 765 432 10</p>
+                            </div>
                         </div>
-                    </div>
-                    <div class="loca_phone">
-                        <div><img src="images/mail.png"></div>
-                        <div>
-                            <p>hello@luxi.com</p>
+                    </a>
+                    <a href="mailto:hello@luxi.com" class="no_underline">
+                        <div class="loca_phone">
+                            <div><img src="images/mail.png"></div>
+                            <div>
+                                <p>hello@luxi.com</p>
+                            </div>
                         </div>
-                    </div>
+                    </a>
                 </div>
                 <div class="loca_info">
-                    <div class="loca_phone">
-                        <div><img src="images/pin.png"></div>
-                        <div id="last">
-                            <p>Vivamus street Block C - Vestibulum Building - 3rd Floor</p>
+                    <a href="https://www.google.com/maps/place/Kajang+Hospital/@2.9926246,101.7932559,18.89z/data=!4m5!3m4!1s0x31cdcb81fb409889:0xa9a6012492ad7d36!8m2!3d2.992875!4d101.7928458"
+                        class="no_underline">
+                        <div class="loca_phone">
+                            <div><img src="images/pin.png"></div>
+                            <div id="last">
+                                <p>Vivamus street Block C - Vestibulum Building - 3rd Floor</p>
+                            </div>
                         </div>
-                    </div>
+                    </a>
+
                 </div>
                 <div class="loca_info">
                     <div class="loca_phone">
@@ -272,11 +287,11 @@
                 </div>
                 <div class="loca_info">
                     <div class="loca_phone">
-                        <div><img src="images/bottom_call.png"></div>
-                        <div><img src="images/fb.png"></div>
-                        <div><img src="images/youtube.png"></div>
-                        <div><img src="images/Insta.png"></div>
-                        <div><img src="images/Telegram.png"></div>
+                        <div><a href="tel:+98 765 432 10"><img src="images/bottom_call.png"></a></div>
+                        <div><a href="www.facebook.com"><img src="images/fb.png"></a></div>
+                        <div><a href="www.youtube.com"><img src="images/youtube.png"></a></div>
+                        <div><a href="www.instagram.com"><img src="images/Insta.png"></a></div>
+                        <div><a href="www.telegram.com"><img src="images/Telegram.png"></a></div>
                     </div>
                 </div>
 
@@ -284,7 +299,8 @@
             </div>
         </div>
         <div class="loca">
-            <img src="images/location.png" id="map">
+            <a href="https://www.google.com/maps/place/Kajang+Hospital/@2.9926246,101.7932559,18.89z/data=!4m5!3m4!1s0x31cdcb81fb409889:0xa9a6012492ad7d36!8m2!3d2.992875!4d101.7928458"
+                class="no_underline"><img src="images/location.png" id="map"></a>
         </div>
 
     </div>
