--- a/assignment/index.html
+++ b/assignment/index.html
@@ -288,10 +288,10 @@
                 <div class="loca_info">
                     <div class="loca_phone">
                         <div><a href="tel:+98 765 432 10"><img src="images/bottom_call.png"></a></div>
-                        <div><a href="www.facebook.com"><img src="images/fb.png"></a></div>
-                        <div><a href="www.youtube.com"><img src="images/youtube.png"></a></div>
-                        <div><a href="www.instagram.com"><img src="images/Insta.png"></a></div>
-                        <div><a href="www.telegram.com"><img src="images/Telegram.png"></a></div>
+                        <div><a href="https://www.facebook.com"><img src="images/fb.png"></a></div>
+                        <div><a href="https://www.youtube.com"><img src="images/youtube.png"></a></div>
+                        <div><a href="https://www.instagram.com"><img src="images/Insta.png"></a></div>
+                        <div><a href="https://www.telegram.com"><img src="images/Telegram.png"></a></div>
                     </div>
                 </div>
 
