--- a/assignment/index.html
+++ b/assignment/index.html
@@ -58,7 +58,7 @@
         <div id="about_us_right">
             <h1>We will services for </h1>
             <h2>24/7</h2>
-            <p>Hour</p>
+            <p id="padding_0">Hour</p>
             <div>
                 <p>Our clinics have been certified by the Board of Medicine Malaysia</p><br><br>
                 <a class="button" href="facility.html">Click for see Our Facility</a>
