--- a/assignment/dr_john.html
+++ b/assignment/dr_john.html
@@ -5,6 +5,7 @@
     <title>Dr.John</title>
     <link rel="icon" type="image/x-icon" href="images/logo.png" />
     <link href="css/styles.css" rel="stylesheet" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 </head>
 
 <body id="Doctor">
