--- a/assignment/sign_up.html
+++ b/assignment/sign_up.html
@@ -5,6 +5,7 @@
     <title>Sign Up</title>
     <link rel="icon" type="image/x-icon" href="images/logo.png" />
     <link href="css/styles.css" rel="stylesheet" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 </head>
 
 <body class="appointment">
