--- a/week10/index.html
+++ b/week10/index.html
@@ -10,9 +10,27 @@
 </head>
 
 <body>
-    Here is your HTML CONTENT
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
-        crossorigin="anonymous"></script>
+    <div class="bg-secondary text-center p-5 mb-5">
+        <h1>My First Bootstrap Page</h1>
+        <p>Resize this responsive page to see the effect!</p>
+    </div>
+    <div class="container">
+        <div class="row">
+            <div class="col">
+                <h3>Column 1</h3>
+                <p>Lorem ipsum dolor..</p>
+            </div>
+            <div class="col">
+                <h3>Column 2</h3>
+                <p>Lorem ipsum dolor..</p>
+            </div>
+            <div class="col">
+                <h3>Column 3</h3>
+                <p>Lorem ipsum dolor..</p>
+            </div>
+        </div>
+    </div>
+
 </body>
 
 </html>
