--- a/week10/exercise_1.html
+++ b/week10/exercise_1.html
@@ -11,7 +11,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 
-<body>
+<body class="container">
     <nav class="navbar navbar-expand-lg bg-light">
         <div class="container-fluid">
             <nav class="navbar bg-light">
